syntax = "proto3";

package users.v1;

import "google/api/annotations.proto";

// UsersService is service for users managments.
service UsersService {
  // Register registers a new user.
  rpc Register (RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
        post: "/api/v1/users/register"
        body: "*"
    };
  };
  // Login logs in a user and returns an auth token.
  rpc Login (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
        post: "/api/v1/users/login"
        body: "*"
    };
  };
}

message RegisterRequest {
  string login = 1; // Login of the user to register.
  string password = 2; // Password of the user to register.
}

message RegisterResponse {
}

message LoginRequest {
  string login = 1; // Login of the user to login.
  string password = 2; // Password of the user to login.
}

message LoginResponse {
  string token = 1; // Auth token of the logged in user.
}
